fix only one point being visible

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,6 +17,7 @@
 .evidence-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  position: relative;
   margin-bottom: 50px;
 }
 
